--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -8,13 +8,13 @@
         
         <div class="btn-wrapper">
 
-            <button class="btn-primary">{{ primaryBtnText }}</button>
+            <button class="btn-primary" (click)="submit()">{{ primaryBtnText }}</button>
             <div class="divider">
                 <div></div>
                 <span>or</span>
                 <div></div>
             </div>
-            <button class="btn-secondary">{{ secundaryBtnText }}</button>
+            <button class="btn-secondary"(click)="navigate()">{{ secundaryBtnText }}</button>
 
         </div>
 
