--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,8 +1,28 @@
-<app-default-login-layout title="Login into your account" primaryBtnText="Login Now" secundaryBtnText="Sing up now">
+<app-default-login-layout title="Login into your account" primaryBtnText="Login Now" secundaryBtnText="Sing up now"
+(submit)="submit()"
+(navigate)="navigate()">
 
     <form [formGroup]="loginForm">
 
+        <app-primary-input
+            formControlName="email"
+            inputName="email"
+            type="email"
+            label="Email"
+            placeholder="Exemplo@gmail.com"> 
+            <img src="./svg/email-icon.svg" alt="">
 
+        </app-primary-input>
+
+        <app-primary-input
+            formControlName="password"
+            inputName="password"
+            type="password"
+            label="Your password"> 
+        <img src="./svg/password-icon.svg" alt="">
+
+    </app-primary-input>
+    <span>Forgot password</span>
 
     </form>
 
