--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -8,7 +8,7 @@
         
         <div class="btn-wrapper">
 
-            <button class="btn-primary" (click)="submit()">{{ primaryBtnText }}</button>
+            <button class="btn-primary" (click)="submit()" [disabled]="disablePrimaryBtn">{{ primaryBtnText }}</button>
             <div class="divider">
                 <div></div>
                 <span>or</span>
