--- a/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -73,6 +73,10 @@ section {
             padding: 12px 24px;
             cursor: pointer;
 
+            &:disabled{
+                opacity: 0.8;
+            }
+
             &.btn-primary {
                 background-color: $primary-color;
                 color: white;
